# Circe

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Example1.ipynb  LICENSE.txt  MANIFEST.in  README.md  build.py  circe_celloracle_environment.yml  compare_speed_metacells.py  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  codecov.yaml  codecov2.yml  test_pip_version.yml  wheels.yml
.ipynb_checkpoints/: Example1-checkpoint.ipynb
Examples/: Example1.ipynb  Minimal_example.ipynb  circe_celloracle_tutorial.ipynb
atac_networks/: __init__.py  atac_network.py  atac_networks.py  inverse_covariance.py  metacells.py  metrics.py  quic_graph_lasso.py
atac_networks.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
atacnet/: __init__.py  atacnet.py  inverse_covariance.py  metacells.py  quic_graph_lasso.py
atacnet/pyquic/: __init__.py  pyquic.cpp
atacnet/tests/: test_main.py
circe/: __init__.py  ccan_module.py  circe.py  downloads.py  draw.py  gl_network.py  graphical_lasso.py  inverse_covariance.py  latent_network.py  metacells.py  metrics.py  quic_graph_lasso.py  rank_correlation.py  utils.py  vae.py
circe/pyquic/: pyquic.cpp
circe/pyquic_ext/: pyquic.cpp
docs/: conf.py  index.rst  modules.rst  requirements.txt
docs/source/: conf.py  index.rst
docs/source/API/: ccans_modules.rst  download.rst  draw.rst  infer_network.rst  metacells.rst  utils.rst
docs/source/circe_explained/: 1_circe_installation.rst  1_circe_summary.rst  2_algorithm.rst  circe_preprocessing.md  circe_scores.md
docs/source/examples/: 1_Minimal_example.ipynb  2_Detailed_example.ipynb  3_Visualize co-accessible DNA regions.ipynb  4_circe_celloracle_tutorial.ipynb  Visualize co-accessible DNA regions.ipynb
ext/src/: pyquic.cpp
pyquic_ext/: pyquic.cpp
src/circe/: __init__.py
tests/: test_main.py
tests/ccans_modules/: ccan_modules.py
tests/test_ccans_modules/: test_ccans_modules.py
tests/test_draw/: test_draw.py
tests/test_metacell/: test_metacell.py
tests/test_network/: test_network.py
tests/test_utils/: test_skggm_func.py  test_utils.py
